tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-generic-close.ari
fn identity[T(value: T) -> T {
  return value;
}
